# multi_collin

./: README.md  pyproject.toml  requirements.txt
notebooks/: example.ipynb
src/multicollinearity/: feature_reduction.py  main.py
