[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-collinearity"
version = "0.0.1"
authors = [
  { name="Vishal Patel", email="vishal@derive.io" },
]
description = "Feature reduction using multi-collinearity"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
